setup material ui theme

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 body {
   margin: 0;
 }
+
+/* andika-new-basic-regular - latin */
+@font-face {
+  font-family: 'Andika New Basic';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+       url('./fonts/andika-latin/andika-new-basic-v17-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('./fonts/andika-latin/andika-new-basic-v17-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
